--- a/css/style.css
+++ b/css/style.css
@@ -520,7 +520,7 @@ hamburger
   text-align: left;
   padding: .5rem;
   margin: 2em auto;
-  background: linear-gradient(0deg, #20262e, #29323c 50%);
+  background: linear-gradient(0deg, #1f252d, #343f4c 50%);
   border-radius: 10px;
   border: none;
   position: relative;
@@ -1042,7 +1042,7 @@ hamburger
         align-items: flex-start;
         justify-content: center;
         flex-direction: column;
-        background: linear-gradient(0deg, #20262e, #29323c 50%);
+        background: linear-gradient(0deg, #1f252d, #343f4c 50%);
         transition: 1.3s ease; }
         @media (min-width: 768px) {
           #projects .projects .all-projects .project-item .project-tile {
@@ -1548,7 +1548,7 @@ hamburger
         opacity: 1; }
 
 #footer {
-  background-image: linear-gradient(0deg, #20262e, #29323c 50%);
+  background-image: linear-gradient(0deg, #1f252d, #343f4c 50%);
   background-color: #333; }
   #footer .footer {
     min-height: 100vh;
@@ -2029,7 +2029,7 @@ body {
 
 #home {
   background-color: #29323c;
-  background: linear-gradient(0deg, #29323c 0%, #485563 100%);
+  background: linear-gradient(0deg, #1f252d, #343f4c 50%);
   position: relative;
   z-index: 1;
   overflow: hidden; }
@@ -2141,7 +2141,7 @@ body {
       outline: none; }
     #home .hero #cta-header::before {
       box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2);
-      background: linear-gradient(0deg, #20262e, #485563); }
+      background: linear-gradient(0deg, #3f0d0d, #dc134c); }
     #home .hero #cta-header::after {
       opacity: 1;
       z-index: -1;
@@ -2150,7 +2150,7 @@ body {
       transition: .3s;
       outline: none;
       border: none;
-      background: linear-gradient(0deg, #485563, #20262e);
+      background: linear-gradient(0deg, #dc134c, #3f0d0d);
       box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px #ddda, 3px 3px 3px rgba(0, 0, 0, 0.2); }
     #home .hero #cta-header span {
       position: relative;
@@ -2176,6 +2176,7 @@ body {
     transform: translateY(0); } }
     #home .hero #cta-header:hover span {
       color: #ead2a1;
+      color: #f4f4f4;
       animation: none; }
     #home .hero #cta-header:hover::before {
       opacity: 0; }
@@ -2188,10 +2189,7 @@ body {
     position: absolute;
     bottom: 10vh;
     left: 5vw;
-    transform: translateY(20vh);
     transition: 1s; }
-    #home #cta.scrollOut {
-      transform: translateY(0); }
     #home #cta .cta {
       font-size: 1.5rem;
       font-family: "Ubuntu", sans-serif;
