--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,8 @@ hamburger
           font-family: 'Gruppo', cursive;
           border: 1px solid #ead2a1;
           padding-left: .15rem;
-          border-radius: 5px; }
+          border-radius: 5px;
+          transition: .2s; }
           @media (min-width: 768px) {
             #header .header #navbar .brand h1 {
               font-size: 1.5em; } }
@@ -293,7 +294,15 @@ hamburger
             outline: none;
             color: #29323c;
             border-top-right-radius: 5px;
-            border-bottom-right-radius: 5px; }
+            border-bottom-right-radius: 5px;
+            transition: .2s; }
+          #header .header #navbar .brand h1:hover {
+            background: linear-gradient(0deg, #deb86e, #ead2a1);
+            color: #29323c;
+            border-color: #29323c; }
+            #header .header #navbar .brand h1:hover span {
+              background: linear-gradient(0deg, #1f252d, #343f4c 50%);
+              color: #ead2a1; }
       @media (max-width: 1024px) {
         #header .header #navbar .nav-list .links-container {
           position: absolute;
@@ -2106,7 +2115,7 @@ body {
     margin: 0;
     width: 100%;
     width: auto;
-    border-radius: 10px;
+    border-radius: 15px;
     border: none;
     outline: none;
     opacity: 0;
@@ -2135,7 +2144,7 @@ body {
       left: 0;
       width: 100%;
       height: 100%;
-      border-radius: 10px;
+      border-radius: 15px;
       transition: .3s ease;
       border: none;
       outline: none; }
