--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ hamburger
             color: #29323c;
             border-color: #29323c; }
             #header .header #navbar .brand h1:hover span {
-              background: linear-gradient(0deg, #1f252d, #343f4c 50%);
+              background: linear-gradient(0deg, #1f252d, #343f4c 70%);
               color: #ead2a1; }
       @media (max-width: 1024px) {
         #header .header #navbar .nav-list .links-container {
@@ -529,7 +529,7 @@ hamburger
   text-align: left;
   padding: .5rem;
   margin: 2em auto;
-  background: linear-gradient(0deg, #1f252d, #343f4c 50%);
+  background: linear-gradient(0deg, #1f252d, #343f4c 70%);
   border-radius: 10px;
   border: none;
   position: relative;
@@ -1051,7 +1051,7 @@ hamburger
         align-items: flex-start;
         justify-content: center;
         flex-direction: column;
-        background: linear-gradient(0deg, #1f252d, #343f4c 50%);
+        background: linear-gradient(0deg, #1f252d, #343f4c 70%);
         transition: 1.3s ease; }
         @media (min-width: 768px) {
           #projects .projects .all-projects .project-item .project-tile {
@@ -1557,7 +1557,7 @@ hamburger
         opacity: 1; }
 
 #footer {
-  background-image: linear-gradient(0deg, #1f252d, #343f4c 50%);
+  background-image: linear-gradient(0deg, #1f252d, #343f4c 70%);
   background-color: #333; }
   #footer .footer {
     min-height: 100vh;
@@ -2038,7 +2038,7 @@ body {
 
 #home {
   background-color: #29323c;
-  background: linear-gradient(0deg, #1f252d, #343f4c 50%);
+  background: linear-gradient(0deg, #1f252d, #343f4c 70%);
   position: relative;
   z-index: 1;
   overflow: hidden; }
@@ -2166,7 +2166,6 @@ body {
       display: inline-block;
       text-transform: uppercase;
       color: #f4f4f4;
-      color: #ead2a1;
       font-size: 2em;
       font-weight: 700;
       animation: animate 3s ease-in-out infinite;
@@ -2178,7 +2177,7 @@ body {
   0% {
     transform: translateY(0px); }
   20% {
-    color: #f4f4f4;
+    color: #fffa;
     transform: translateY(-10px) scale(1.1); }
   40%,
   100% {
