--- a/scss/style.scss
+++ b/scss/style.scss
@@ -229,7 +229,6 @@ body {
                 display: inline-block;
                 text-transform: uppercase;
                 color: $text-light;
-                color: $span-gold;
                 font-size: 2em;
                 font-weight: 700;
                 animation: animate 3s ease-in-out infinite;
@@ -242,7 +241,7 @@ body {
                     }
 
                     20% {
-                        color: $text-light;
+                        color: $text-light-trans;
                         transform: translateY(-10px) scale(1.1);
                     }
 
