--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ hamburger
             color: #29323c;
             border-color: #29323c; }
             #header .header #navbar .brand h1:hover span {
-              background: linear-gradient(0deg, #1f252d, #343f4c 70%);
+              background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
               color: #ead2a1; }
       @media (max-width: 1024px) {
         #header .header #navbar .nav-list .links-container {
@@ -529,7 +529,7 @@ hamburger
   text-align: left;
   padding: .5rem;
   margin: 2em auto;
-  background: linear-gradient(0deg, #1f252d, #343f4c 70%);
+  background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
   border-radius: 10px;
   border: none;
   position: relative;
@@ -1051,7 +1051,7 @@ hamburger
         align-items: flex-start;
         justify-content: center;
         flex-direction: column;
-        background: linear-gradient(0deg, #1f252d, #343f4c 70%);
+        background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
         transition: 1.3s ease; }
         @media (min-width: 768px) {
           #projects .projects .all-projects .project-item .project-tile {
@@ -1557,7 +1557,7 @@ hamburger
         opacity: 1; }
 
 #footer {
-  background-image: linear-gradient(0deg, #1f252d, #343f4c 70%);
+  background-image: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
   background-color: #333; }
   #footer .footer {
     min-height: 100vh;
@@ -2038,7 +2038,7 @@ body {
 
 #home {
   background-color: #29323c;
-  background: linear-gradient(0deg, #1f252d, #343f4c 70%);
+  background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
   position: relative;
   z-index: 1;
   overflow: hidden; }
