--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ hamburger
   #header .hamburger.hamburger:before {
     border: 0.15em solid #ead2a1;
     opacity: 0;
-    animation: ham-pulse 2.5s ease infinite .5s; }
+    animation: ham-pulse 2.5s ease infinite; }
 
 @keyframes ham-pulse {
   50% {
@@ -253,9 +253,13 @@ hamburger
   z-index: 50;
   left: 0;
   top: 0;
-  width: 100vw; }
+  width: 100vw;
+  height: 7vh;
+  background: transparent; }
+  #header.header-io {
+    background: #29323c; }
   #header .header {
-    min-height: 8vh;
+    height: 100%;
     transition: 1s ease background-color; }
     #header .header #navbar {
       display: flex;
@@ -263,13 +267,13 @@ hamburger
       justify-content: space-between;
       width: 100%;
       height: 100%;
-      padding: 1rem 5vw;
+      padding: .5rem 5vw;
       z-index: 5; }
-      @media (max-width: 1200px) {
+      @media (max-width: 1024px) {
         #header .header #navbar {
           padding: 0 5vw; } }
       #header .header #navbar .brand {
-        transition: 1s ease;
+        transition: .5s ease;
         opacity: 0; }
         #header .header #navbar .brand h1 {
           font-size: 1.25em;
@@ -473,7 +477,7 @@ hamburger
               width: 50%;
               opacity: 1; }
             #header .header #navbar .nav-list ul li a {
-              font-size: .9rem;
+              font-size: 1rem;
               padding: .3em .5em;
               margin: 0 auto;
               display: block;
