--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,25 +5,32 @@
     left: 0;
     top: 0;
     width: 100vw;
-
+    height: 7vh;
+    // overflow: hidden;
+    background: transparent;
+    // INTERSECTION CLASS
+    &.header-io {
+        background: $overlay-blue-dark;
+    }
     .header {
-        min-height: 8vh;
+        height: 100%;
         transition: 1s ease background-color;
-
+        
         #navbar {
             display: flex;
             align-items: center;
             justify-content: space-between;
             width: 100%;
             height: 100%;
-            padding: 1rem 5vw;
+            // background: red;
+            padding: .5rem 5vw;
             z-index: 5;
-            @media (max-width: 1200px) {
+            @media (max-width: 1024px) {
                 padding: 0 5vw;
             }
             // corner logo
             .brand {
-                transition: 1s ease;
+                transition: .5s ease;
                 opacity: 0;
                 h1 {
                     font-size: 1.25em;
@@ -333,7 +340,7 @@
                             // end of list item underline
                             
                             a {
-                                font-size: .9rem;
+                                font-size: 1rem;
                                 padding: .3em .5em;
                                 margin: 0 auto;
                                 display: block;
