--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -58,7 +58,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            box-shadow: $box-light-top-md;
+            box-shadow: $box-light-top-sm;
             border-radius: 10px;
             border: none;
             outline: none;
@@ -171,7 +171,6 @@
 
             // button box shadow states
             &.active {
-                color: $span-gold;
                 letter-spacing: normal;
                 &::before {opacity: 0}
                 &::after {opacity: 1}
