--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -279,11 +279,12 @@
                         }
                         i {
                             margin-right: .5em;
-                            padding: .5em;
+                            padding: 0;
                             text-align: left;
                             color: $text-white-trans;
-                            border-radius: 10px;
-                            box-shadow: $box-light-top-sm;
+                            border-radius: 5px;
+                            border: 1px solid $span-gold;
+                            // box-shadow: $box-light-top-sm;
                         }
                         // li hover state
                         &:hover {
