--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -46,6 +46,7 @@ $overlay-dark: linear-gradient(0deg, hsl(214, 18%, 15%) 30% , hsl(212, 19%, 25%)
 $overlay-btn: linear-gradient(0deg, #20262e, #485563 );
 $overlay-btn-hover: linear-gradient(0deg , #485563, #20262e );
 $overlay-blue-dark:#29323c;
+$overlay-blue-dark-trans:rgba(34, 41, 49, 0.9);
 $overlay-blue-darker:#20262e;
 $overlay-blue-light: #485563;
 $nav-background: #29323c;
