--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -25,8 +25,11 @@
             justify-content: space-between;
             // DATA-SCROLL
             &[data-scroll] {
+                transform: scale(1) translateY(10vh);
+            }
+            &[data-scroll="in"] {
                 transition: 1.5s;
-                transform: scale(1);
+                transform: scale(1) translateY(0vh);
             }
             .work-title {
                 text-align: center;
