--- a/sass/style.scss
+++ b/sass/style.scss
@@ -439,7 +439,20 @@ body {
         }
         [data-scroll] {
             transform: scale(1);
+                img {
+                    transform: scale(4);
+                    opacity: 0;
+                }
+            
+        }
+        [data-scroll="in"] {
+            transform: scale(1);
             transition: 1.5s ease;
+            img {
+                transform: scale(1);
+                transition: 1.5s;
+                opacity: 1;
+            }
         }
     }
     &.pad-me {
