active background color

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -22,6 +22,10 @@
                 }
             }
         }
+        // DARK HEADER BACKGROUND WHEN SIDEBAR VISIBLE
+        &.active-header {
+            background: $overlay-blue-dark;
+        }
     }
     // END OF INTERSECTION CLASS
 
