--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,9 @@ hamburger
   transition: 1s;
   transition-delay: 0.4s;
 }
+#header.header-io.active-header {
+  background: #29323c;
+}
 #header .header {
   height: 100%;
   transition: 1s ease background-color;
