--- a/css/style.css
+++ b/css/style.css
@@ -142,62 +142,7 @@ hamburger
 }
 
 /*end of bootstrap scrollbar*/
-.section-title {
-  font-size: 2.3em;
-  font-weight: 500;
-  color: #000;
-  max-width: 100vw;
-  margin-bottom: 10px;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  text-align: center;
-  padding: 0.5em;
-  font-family: "Ubuntu", sans-serif;
-}
-@media (min-width: 768px) {
-  .section-title {
-    font-size: 3em;
-  }
-}
-
 /* TEXT-REFLECT CSS */
-.section-title,
-.section-title:before,
-.text-reflect.section-title span {
-  display: block;
-  margin: 0;
-  padding: 0;
-}
-
-.section-title,
-.section-title:before,
-.section-title:after {
-  position: relative;
-}
-
-.section-title {
-  top: -8px;
-}
-
-.section-title:before {
-  content: attr(data-text);
-  top: 2.1em;
-  transform: scale(1, -1);
-  backface-visibility: visible;
-  z-index: 1;
-}
-
-.section-title:after {
-  content: "";
-  display: block;
-  top: -6px;
-  left: 0;
-  width: 100%;
-  height: 60px;
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.589) 0%, white 50%);
-  z-index: 2;
-}
-
 /* END OF TEXT-REFLECT CSS */
 /* section title span animation */
 .section-title span {
@@ -629,9 +574,6 @@ hamburger
   flex-direction: column;
   justify-content: flex-start;
   text-align: center;
-  width: 100vw;
-  padding-bottom: 15vh;
-  margin: 0 auto;
   background: linear-gradient(0deg, #29323c 0%, #485563 100%);
   background: #fff;
 }
@@ -1230,7 +1172,6 @@ hamburger
   flex-direction: column;
   width: 100%;
   margin: 0 auto;
-  padding: 0 0 10vh 0;
   background-color: #fff;
   position: relative;
 }
@@ -2465,6 +2406,7 @@ html {
 body {
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
+  width: 100%;
 }
 body a {
   text-decoration: none;
@@ -2725,6 +2667,28 @@ body span {
 }
 #home #cta .cta:active::after {
   opacity: 1;
+}
+
+section {
+  padding: 5vh 0;
+  width: 100%;
+}
+section .section-title {
+  font-size: 2.25rem;
+  font-weight: 400;
+  color: #000;
+  max-width: 100vw;
+  margin: 5vh 0 10vh;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  text-align: center;
+  font-family: "Ubuntu", sans-serif;
+  -webkit-box-reflect: below -0.5rem linear-gradient(transparent, #0004);
+}
+@media (min-width: 768px) {
+  section .section-title {
+    font-size: 2.5rem;
+  }
 }
 
 .section-pad {
