--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -5,7 +5,7 @@
         flex-direction: column;
         width: 100%;
         margin: 0 auto;
-        padding: 0 0 10vh 0;
+        // padding: 0 0 10vh 0;
         background-color: $background-light;
         position: relative;
         // section header
