--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -188,61 +188,46 @@ hamburger
 }
 /*end of bootstrap scrollbar*/
 
-// section-title
-.section-title {
-    font-size: 2.3em;
-    @media (min-width:768px){
-        font-size: 3em;
-    }
-    font-weight: 500;
-    color: #000;
-    max-width: 100vw;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-    letter-spacing: .1em;
-    text-align: center;
-    padding: .5em;
-    font-family: $font-ubuntu;
-}
+
 /* TEXT-REFLECT CSS */
-.section-title,
-.section-title:before,
-.text-reflect.section-title span {
-    display: block;
-    margin: 0;
-    padding: 0;
-}
+// .section-title,
+// .section-title:before,
+// .text-reflect.section-title span {
+//     display: block;
+//     margin: 0;
+//     padding: 0;
+// }
 
-.section-title,
-.section-title:before,
-.section-title:after {
-    position: relative;
+// .section-title,
+// .section-title:before,
+// .section-title:after {
+//     position: relative;
     
-}
+// }
 
-.section-title {
-    top: -8px;
-}
+// .section-title {
+//     top: -8px;
+// }
 
-.section-title:before {
-    content: attr(data-text);
-    top: 2.1em;
-    transform: scale(1, -1);
-    backface-visibility: visible;
-    z-index: 1;
+// .section-title:before {
+//     content: attr(data-text);
+//     top: 2.1em;
+//     transform: scale(1, -1);
+//     backface-visibility: visible;
+//     z-index: 1;
 
-}
+// }
 
-.section-title:after {
-    content: '';
-    display: block;
-    top: -6px;
-    left: 0;
-    width: 100%;
-    height: 60px;
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.589) 0%, rgb(255, 255, 255) 50%);
-    z-index: 2;
-}
+// .section-title:after {
+//     content: '';
+//     display: block;
+//     top: -6px;
+//     left: 0;
+//     width: 100%;
+//     height: 60px;
+//     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.589) 0%, rgb(255, 255, 255) 50%);
+//     z-index: 2;
+// }
 /* END OF TEXT-REFLECT CSS */
 // end of section-title
 /* section title span animation */
