--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,7 +23,7 @@ html {
 body {
     font-family: "Montserrat", sans-serif;
     overflow-x: hidden;
-    
+    width: 100%;
     a {
         text-decoration: none;
     }
@@ -345,6 +345,31 @@ body {
 }
 // end of hero section
 
+section {
+    padding: 5vh 0;
+    width: 100%;
+    // section-title
+.section-title {
+    font-size: 2.25rem;
+    @media (min-width:768px){
+        font-size: 2.5rem;
+        
+    }
+    font-weight: 400;
+    color: #000;
+    max-width: 100vw;
+    margin: 5vh 0 10vh;
+    // border: 2px solid red;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    text-align: center;
+    // padding: .5em;
+    font-family: $font-ubuntu;
+    -webkit-box-reflect: below -.5rem linear-gradient(transparent, #0004);
+
+    
+}
+}
 // pad section 
 .section-pad {
     height: 90vh;
