--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -164,6 +164,7 @@
 
             &::after {
                 background: $button-crimson-hover;
+                background: $overlay-btn-hover;
             
                 opacity: 0;
                 box-shadow: $box-dark-top-sm;
@@ -171,14 +172,13 @@
 
             // button box shadow states
             &.active {
+                transform: scale(.97);
                 letter-spacing: normal;
                 &::before {opacity: 0}
                 &::after {opacity: 1}
             }
             &:active {
-                transform: scale(.94);
                 transition: .2s;
-                color: $span-gold;
                 letter-spacing: normal;
                 transform: scale(.97);
                 &::before {
@@ -214,7 +214,7 @@
             }
             // end of show-contents
             display: none;
-            width: 100vw;
+            width: 100%;
             z-index: 1;
             justify-content: center;
             align-items: center;
