--- a/css/style.css
+++ b/css/style.css
@@ -617,7 +617,7 @@ hamburger
   left: 0;
   width: 100%;
   height: 100%;
-  box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   border: none;
   outline: none;
@@ -707,13 +707,13 @@ hamburger
 }
 #skills .dropdown .dropbtn::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
 }
 #skills .dropdown .dropbtn::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
   background: linear-gradient(0deg, #485563, #20262e);
   opacity: 0;
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px #ddda, 3px 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 2px rgba(221, 221, 221, 0.3), 3px 3px 3px rgba(0, 0, 0, 0.2);
 }
 #skills .dropdown .dropbtn.active {
   transform: scale(0.97);
@@ -836,7 +836,7 @@ hamburger
   width: 100%;
   border-radius: 10px;
   height: 100%;
-  box-shadow: inset 3px 3px 3px #ddda, inset -3px -3px 3px #000;
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
   z-index: 2;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon {
@@ -1023,7 +1023,7 @@ hamburger
   width: 100%;
   height: 100%;
   background: linear-gradient(0deg, #20262e, #485563);
-  box-shadow: inset 3px 3px 4px #ddda, inset -3px -3px 4px #000a, 5px 5px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 3px 3px 4px rgba(221, 221, 221, 0.5), inset -3px -3px 4px rgba(0, 0, 0, 0.2), 5px 5px 1px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   z-index: -2;
   opacity: 1;
@@ -1125,7 +1125,7 @@ hamburger
   cursor: pointer;
   transition: 0.3s ease;
   position: relative;
-  box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
 }
 #contact .contact .contact-items .contact-item .contact-info a:hover {
   transform: scale(0.97);
@@ -1480,11 +1480,11 @@ hamburger
 }
 #work .work-items .work-item .view-site-btn::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
 }
 #work .work-items .work-item .view-site-btn::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 2px 3px 2px rgba(0, 0, 0, 0.35);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 3px 2px rgba(0, 0, 0, 0.35);
   opacity: 0;
 }
 #work .work-items .work-item .view-site-btn:hover {
@@ -1560,7 +1560,7 @@ hamburger
   position: absolute;
   opacity: 0;
   z-index: 20;
-  box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
 }
 .about .col-right .about-title h2 {
   display: inline-block;
@@ -1583,11 +1583,11 @@ hamburger
   border-radius: 10px;
 }
 .about .col-right .about-title h2::before {
-  box-shadow: inset 3px 3px 4px #000a, inset -3px -3px 4px #ddda;
+  box-shadow: inset 3px 3px 4px rgba(0, 0, 0, 0.2), inset -3px -3px 4px rgba(221, 221, 221, 0.5);
 }
 .about .col-right .about-title h2::after {
   opacity: 0;
-  box-shadow: inset 3px 3px 4px #ddda, inset -3px -3px 4px #000a, 5px 5px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 3px 3px 4px rgba(221, 221, 221, 0.5), inset -3px -3px 4px rgba(0, 0, 0, 0.2), 5px 5px 1px rgba(0, 0, 0, 0.1);
 }
 .about .col-right .about-title:hover #cv-download {
   letter-spacing: 0.1em;
@@ -1800,7 +1800,7 @@ hamburger
   padding: 0.3em;
   border-radius: 10px;
   transition: 1s ease;
-  box-shadow: inset 5px 5px 5px #fffa, inset -10px -10px 10px #000a;
+  box-shadow: inset 5px 5px 5px rgba(221, 221, 221, 0.5) inset -10px -10px 10px rgba(0, 0, 0, 0.2);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -1971,11 +1971,11 @@ hamburger
 }
 #footer .footer form button::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
 }
 #footer .footer form button::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px #ddda, 3px 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 2px rgba(221, 221, 221, 0.3), 3px 3px 3px rgba(0, 0, 0, 0.2);
   opacity: 0;
 }
 #footer .footer form button:hover {
@@ -2553,7 +2553,7 @@ body span {
   outline: none;
 }
 #home .hero #cta-header::before {
-  box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
 }
 #home .hero #cta-header::after {
@@ -2565,7 +2565,7 @@ body span {
   outline: none;
   border: none;
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px #ddda, 3px 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 2px rgba(221, 221, 221, 0.3), 3px 3px 3px rgba(0, 0, 0, 0.2);
 }
 #home .hero #cta-header span {
   position: relative;
@@ -2643,12 +2643,12 @@ body span {
 }
 #home #cta .cta::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
 }
 #home #cta .cta::after {
   opacity: 0;
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px #ddda, 3px 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 2px rgba(221, 221, 221, 0.3), 3px 3px 3px rgba(0, 0, 0, 0.2);
 }
 #home #cta .cta:hover {
   letter-spacing: normal;
