--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -311,8 +311,9 @@
                         width: 100%;
                         border-radius: 10px;
                         height: 100%;
-                        box-shadow: inset 3px 3px 3px #ddda,
-                            inset -3px -3px 3px #000;
+                        box-shadow: $box-light-top-sm;
+                        // box-shadow: inset 3px 3px 3px #ddda,
+                        //     inset -3px -3px 3px #000;
                         z-index: 2;
                     }
                     // end of skills-item box shadow
