--- a/css/style.css
+++ b/css/style.css
@@ -2429,6 +2429,29 @@ body span {
   z-index: 1;
   overflow: hidden;
 }
+#home::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../img/me-min.jpg);
+  background-image: url(../img/shakexblue-min.jpg);
+  background-repeat: no-repeat;
+  background-position: left;
+  background-position: center;
+  background-size: cover;
+  z-index: -1;
+  opacity: 0.9;
+  mix-blend-mode: overlay;
+}
+@media (min-width: 768px) {
+  #home::after {
+    background-position: left;
+    background-size: contain;
+  }
+}
 #home .hero #hero-h1 {
   margin: 1em auto;
   background: transparent;
