--- a/sass/style.scss
+++ b/sass/style.scss
@@ -50,6 +50,27 @@ body {
     position: relative;
     z-index: 1;
     overflow: hidden;
+    &::after {
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url(../img/me-min.jpg);
+        background-image: url(../img/shakexblue-min.jpg);
+        background-repeat: no-repeat;
+        background-position: left;
+        background-position: center;
+        background-size: cover;
+        z-index: -1;
+        opacity: .9;
+        mix-blend-mode: overlay;
+        @media (min-width: 768px) {
+            background-position: left;
+            background-size: contain;
+        }
+    }
 
     .hero {
         // cursor: grab;
@@ -102,7 +123,6 @@ body {
                             opacity: .7;
                             transform: translateX(10px);
                         }
-
                         100% {
                             opacity: 1;
                         }
