--- a/css/style.css
+++ b/css/style.css
@@ -181,9 +181,9 @@ hamburger
   place-items: center;
   border-radius: 5px;
   transition: 0.5s ease-in;
-  opacity: 0;
+  opacity: 1;
   transform: translateY(10vh);
-  z-index: 1;
+  z-index: 30;
   box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a;
 }
 .top-link i {
@@ -193,11 +193,9 @@ hamburger
 }
 .top-link.show-link {
   transition: all 0.5s ease-in-out;
-  z-index: 5;
   opacity: 1;
   transform: translateY(0);
   transition: 1.5s;
-  z-index: 30;
 }
 @keyframes bounce {
   0% {
@@ -210,21 +208,18 @@ hamburger
     transform: scale(1);
   }
 }
-.top-link:hover {
-  animation: none;
-}
-.top-link:hover i {
-  transform: scale(0.97);
-  transition: 0.2s;
-}
-.top-link:focus {
-  animation: scrollUp 1s ease;
-  animation-fill-mode: forwards;
-}
-@keyframes scrollUp {
-  100% {
-    transform: translateY(-100%);
+@media (min-width: 768px) {
+  .top-link:hover {
+    animation: none;
   }
+  .top-link:hover i {
+    transform: scale(0.97);
+    transition: 0.2s;
+  }
+}
+.top-link:active {
+  transform: scale(0.9);
+  transition: 0.2s;
 }
 
 [data-scroll] {
@@ -664,6 +659,7 @@ hamburger
 }
 #skills .skills-top[data-scroll] {
   transform: scale(1) translateY(10vh);
+  opacity: 1;
 }
 #skills .skills-top[data-scroll=in] {
   transition: 1.5s;
@@ -2443,7 +2439,6 @@ body span {
   background-position: center;
   background-size: cover;
   z-index: -1;
-  opacity: 0.9;
   mix-blend-mode: overlay;
 }
 @media (min-width: 768px) {
