--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,7 +64,7 @@ body {
         background-position: center;
         background-size: cover;
         z-index: -1;
-        opacity: .9;
+        // opacity: .9;
         mix-blend-mode: overlay;
         @media (min-width: 768px) {
             background-position: left;
