--- a/css/style.css
+++ b/css/style.css
@@ -2439,6 +2439,7 @@ body span {
   background-position: center;
   background-size: cover;
   z-index: -1;
+  opacity: 0.7;
   mix-blend-mode: overlay;
 }
 @media (min-width: 768px) {
