--- a/sass/style.scss
+++ b/sass/style.scss
@@ -83,10 +83,10 @@ body {
             position: absolute;
             top: 15vh;
 
-            @media (min-width: 768px) {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
+            @media (min-width: 820px) {
+                // display: flex;
+                // flex-direction: column;
+                // align-items: center;
                 padding: .5em;
             }
 
