--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -10,8 +10,8 @@
     background: transparent;
     // INTERSECTION CLASS
     &.header-io {
-        background: $overlay-blue-dark-trans;
-        transition: background .5s;
+        background-color: $overlay-blue-dark-trans;
+        transition: background-color .5s;
         .header {
             #navbar {
                 .brand {
