--- a/css/style.css
+++ b/css/style.css
@@ -1416,14 +1416,16 @@ hamburger
 }
 #work .work-items .work-item .work-title {
   text-align: center;
+  text-transform: capitalize;
 }
 #work .work-items .work-item .work-title h2 {
   text-transform: capitalize;
   font-family: "Ubuntu", sans-serif;
+  font-size: 1.5rem;
 }
-#work .work-items .work-item .work-title a {
-  color: #000a;
-  font-size: 0.8rem;
+#work .work-items .work-item .work-title p {
+  color: #000;
+  font-size: 1rem;
 }
 #work .work-items .work-item figure {
   margin: 5vh auto;
