--- a/css/style.css
+++ b/css/style.css
@@ -1430,9 +1430,10 @@ hamburger
 #work .work-items .work-item figure {
   margin: 5vh auto;
   width: 65%;
+  width: 16rem;
   height: 65%;
-  border-radius: 50%;
-  border-radius: 5px;
+  height: 16rem;
+  border-radius: 0.5rem;
   overflow: hidden;
   margin: 1rem auto;
   padding: 0.5rem;
@@ -1446,6 +1447,7 @@ hamburger
 #work .work-items .work-item figure img {
   width: 100%;
   height: 100%;
+  border-radius: 0.5rem;
   object-fit: contain;
   transition: 0.3s;
 }
@@ -1455,12 +1457,12 @@ hamburger
   background: #dc143c8c;
   border-radius: 5px;
   color: #f4f4f4;
-  padding: 0.35rem;
+  padding: 0.5rem;
   margin: 0 auto;
   display: block;
   text-align: center;
   text-decoration: none;
-  width: 50%;
+  width: 15rem;
   transition: 0.2s;
   letter-spacing: 0.05rem;
   position: relative;
@@ -1486,15 +1488,32 @@ hamburger
   box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 3px 2px rgba(0, 0, 0, 0.35);
   opacity: 0;
 }
-#work .work-items .work-item .view-site-btn:hover {
-  transform: scale(0.95);
-  letter-spacing: normal;
+@media (min-width: 820px) {
+  #work .work-items .work-item .view-site-btn {
+    width: 10rem;
+  }
+  #work .work-items .work-item .view-site-btn:hover {
+    transform: scale(0.95);
+    letter-spacing: normal;
+  }
+  #work .work-items .work-item .view-site-btn:hover::before {
+    opacity: 0;
+  }
+  #work .work-items .work-item .view-site-btn:hover::after {
+    opacity: 1;
+  }
 }
-#work .work-items .work-item .view-site-btn:hover::before {
-  opacity: 0;
-}
-#work .work-items .work-item .view-site-btn:hover::after {
-  opacity: 1;
+@media (max-width: 820px) {
+  #work .work-items .work-item .view-site-btn:active {
+    transform: scale(0.95);
+    letter-spacing: normal;
+  }
+  #work .work-items .work-item .view-site-btn:active::before {
+    opacity: 0;
+  }
+  #work .work-items .work-item .view-site-btn:active::after {
+    opacity: 1;
+  }
 }
 #work .work-items .work-item p {
   text-align: center;
