--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -23,6 +23,8 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            // ITEM BACKGROUND COLORS
+
             // DATA-SCROLL
             &[data-scroll] {
                 transform: scale(1) translateY(10vh);
@@ -52,9 +54,10 @@
                     height: 10rem;
                 }
                 width: 65%;
+                width: 16rem;
                 height: 65%;
-                border-radius: 50%;
-                border-radius: 5px;
+                height: 16rem;
+                border-radius: .5rem;
                 overflow: hidden;
                 margin: 1rem auto;
                 // border: 1px solid red;
@@ -64,6 +67,7 @@
                 img {
                     width: 100%;
                     height: 100%;
+                    border-radius: .5rem;
                     object-fit: contain;
                     transition: .3s;
                 }
@@ -76,12 +80,12 @@
                 background: $span-crimson-dark;
                 border-radius: 5px;
                 color: $text-light;
-                padding: .35rem;
+                padding: .5rem;
                 margin: 0 auto;
                 display: block;
                 text-align: center;
                 text-decoration: none;
-                width: 50%;
+                width: 15rem;
                 transition: .2s;
                 letter-spacing: .05rem;
                 position: relative;
@@ -108,11 +112,26 @@
                     box-shadow: $box-light-top-sm-hover;
                     opacity: 0;
                 }
-                &:hover {
-                    transform: scale(.95);
-                    letter-spacing: normal;
-                    &::before {opacity: 0;}
-                    &::after {opacity: 1;}
+                
+                // HOVER AND ACTIVE MEDIA QUERY
+                // DESKTOP HOVER STATE
+                @media (min-width: 820px){
+                    width: 10rem;
+                    &:hover {
+                        transform: scale(.95);
+                        letter-spacing: normal;
+                        &::before {opacity: 0;}
+                        &::after {opacity: 1;}
+                    }
+                }
+                // MOBILE ACTIVE CLASS
+                @media (max-width: 820px){
+                    &:active {
+                        transform: scale(.95);
+                        letter-spacing: normal;
+                        &::before {opacity: 0;}
+                        &::after {opacity: 1;}
+                    }
                 }
             }
 
