--- a/css/style.css
+++ b/css/style.css
@@ -174,8 +174,8 @@ hamburger
 /* end of section title span animation */
 .top-link {
   position: fixed;
-  bottom: 1em;
-  right: 1em;
+  bottom: 0;
+  right: 0;
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
   display: grid;
   place-items: center;
@@ -555,6 +555,228 @@ hamburger
   #header .header #navbar .nav-list ul.active {
     background: none;
     box-shadow: none;
+  }
+}
+
+#home {
+  background-color: #29323c;
+  background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+#home::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-position: left;
+  background-size: cover;
+  z-index: -1;
+  mix-blend-mode: overlay;
+  opacity: 0.7;
+}
+@media (min-width: 1024px) {
+  #home::after {
+    background-position: left;
+    background-size: contain;
+    background-image: url(../img/shakexblue-min.jpg);
+  }
+}
+@media (max-width: 1024px) {
+  #home::after {
+    opacity: 1;
+    background-size: cover;
+    background-image: url("../img/massimiliano-morosinotto-STKcS9ojYHU-unsplash-min.jpg");
+  }
+}
+#home .hero #hero-h1 {
+  background: transparent;
+  padding: 0;
+  border-radius: 5px;
+  position: absolute;
+  top: 20vh;
+  left: 5vw;
+}
+@media (min-width: 1024px) {
+  #home .hero #hero-h1 {
+    padding: 0.5em;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+#home .hero #hero-h1 h2 {
+  margin-bottom: 0.2em;
+  display: block;
+  width: fit-content;
+  color: #eee;
+  font-family: "Philosopher", sans-serif;
+}
+@media (min-width: 768px) {
+  #home .hero #hero-h1 h2 {
+    font-size: 2em;
+  }
+}
+#home .hero #hero-h1 h2 span {
+  display: inline-block;
+  color: #f4f4f4;
+  text-align: left;
+  font-size: 1.5em;
+  opacity: 0;
+  line-height: 1.3;
+  animation: hero-span 5s ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: calc(1s + .5s * var(--s));
+  transition: 1s;
+  transform-style: preserve-3d;
+  /* hero h1 keyframes */
+  /* hero h1 keyframes */
+}
+@keyframes hero-span {
+  10% {
+    opacity: 1;
+    transform: translateX(10px);
+  }
+  100% {
+    opacity: 1;
+  }
+}
+#home .hero #hero-h1 #aka span {
+  font-family: "Philosopher", sans-serif;
+  font-size: 2rem;
+  position: relative;
+  display: inline-block;
+  animation: aka 5s ease alternate;
+  animation-delay: 4s;
+  animation-fill-mode: forwards;
+  margin: 0.5em 0;
+  color: #ead2a1;
+  opacity: 0;
+  transform: scale(0.7);
+}
+@keyframes aka {
+  50% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0.8;
+  }
+}
+#home .hero #cta-header {
+  font-size: 1.3em;
+  background: #dc143c;
+  position: relative;
+  display: block;
+  text-align: center;
+  text-align: left;
+  font-family: "Gruppo", cursive;
+  padding: 0.5em;
+  margin: 0;
+  width: 100%;
+  width: auto;
+  border-radius: 1rem;
+  border: none;
+  outline: none;
+  opacity: 0;
+  transform: scale(0.5);
+  transform-style: preserve-3d;
+  animation: show-cta 4s 5.5s;
+  animation-fill-mode: forwards;
+  transition: 0.3s linear;
+  cursor: pointer;
+  -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
+  z-index: 2;
+}
+@media (min-width: 768px) {
+  #home .hero #cta-header {
+    font-size: 1.5em;
+    width: 100%;
+    text-align: center;
+  }
+}
+@keyframes show-cta {
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+#home .hero #cta-header::before, #home .hero #cta-header::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+  transition: 0.3s ease;
+  border: none;
+  outline: none;
+}
+#home .hero #cta-header::before {
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
+  background: linear-gradient(0deg, #3f0d0d, #dc134c);
+}
+#home .hero #cta-header::after {
+  opacity: 1;
+  z-index: -1;
+  animation: 3s cta-btn infinite;
+  animation-delay: 6s;
+  transition: 0.3s;
+  outline: none;
+  border: none;
+  background: linear-gradient(0deg, #dc134c, #3f0d0d);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 2px rgba(221, 221, 221, 0.3), 3px 3px 3px rgba(0, 0, 0, 0.2);
+}
+#home .hero #cta-header span {
+  position: relative;
+  display: inline-block;
+  text-transform: uppercase;
+  color: #f4f4f4;
+  font-size: 2em;
+  font-weight: 700;
+  animation: animate 3s ease-in-out infinite;
+  animation-delay: calc(1s + .2s * var(--i));
+  /* cta keyframes*/
+  /* end of cta keyframes*/
+}
+@keyframes animate {
+  0% {
+    transform: translateY(0px);
+  }
+  20% {
+    transform: translateY(-10px) scale(1.1);
+  }
+  40%, 100% {
+    transform: translateY(0);
+  }
+}
+@media (max-width: 820px) {
+  #home .hero #cta-header:active {
+    transition: 0.2s;
+    transform: scale(0.9);
+  }
+  #home .hero #cta-header:active::before {
+    opacity: 0;
+  }
+  #home .hero #cta-header:active::after {
+    opacity: 1;
+  }
+}
+@media (min-width: 820px) {
+  #home .hero #cta-header:hover {
+    transition: 0.2s;
+    transform: scale(0.9);
+  }
+  #home .hero #cta-header:hover::before {
+    opacity: 0;
+  }
+  #home .hero #cta-header:hover::after {
+    opacity: 1;
   }
 }
 
@@ -2467,273 +2689,6 @@ body p {
 }
 body span {
   color: #dc143c;
-}
-
-#home {
-  background-color: #29323c;
-  background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-}
-#home::after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url(../img/me-min.jpg);
-  background-image: url(../img/shakexblue-min.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-position: left;
-  background-size: cover;
-  z-index: -1;
-  opacity: 0.7;
-  mix-blend-mode: overlay;
-}
-@media (min-width: 768px) {
-  #home::after {
-    background-position: left;
-    background-size: contain;
-  }
-}
-#home .hero #hero-h1 {
-  margin: 1em auto;
-  background: transparent;
-  padding: 0.5em;
-  border-radius: 5px;
-  position: absolute;
-  top: 15vh;
-}
-@media (min-width: 820px) {
-  #home .hero #hero-h1 {
-    padding: 0.5em;
-  }
-}
-#home .hero #hero-h1 h2 {
-  margin-bottom: 0.2em;
-  display: block;
-  width: fit-content;
-  color: #eee;
-  font-family: "Philosopher", sans-serif;
-}
-@media (min-width: 768px) {
-  #home .hero #hero-h1 h2 {
-    font-size: 2em;
-  }
-}
-#home .hero #hero-h1 h2 span {
-  display: inline-block;
-  color: #f4f4f4;
-  text-align: left;
-  font-size: 1.5em;
-  opacity: 0;
-  line-height: 1.3;
-  animation: hero-span 5s ease-in-out;
-  animation-fill-mode: forwards;
-  animation-delay: calc(1s + .5s * var(--s));
-  transition: 1s;
-  transform-style: preserve-3d;
-  /* hero h1 keyframes */
-  /* hero h1 keyframes */
-}
-@keyframes hero-span {
-  10% {
-    opacity: 1;
-    transform: translateX(10px);
-  }
-  100% {
-    opacity: 1;
-  }
-}
-#home .hero #hero-h1 #aka span {
-  font-family: "Philosopher", sans-serif;
-  font-size: 2rem;
-  position: relative;
-  display: inline-block;
-  animation: aka 5s ease alternate;
-  animation-delay: 4s;
-  animation-fill-mode: forwards;
-  margin: 0.5em 0;
-  color: #ead2a1;
-  opacity: 0;
-  transform: scale(0.7);
-}
-@keyframes aka {
-  50% {
-    opacity: 1;
-    transform: scale(1);
-  }
-  100% {
-    opacity: 0.8;
-  }
-}
-#home .hero #cta-header {
-  font-size: 1.3em;
-  position: relative;
-  display: block;
-  text-align: center;
-  text-align: left;
-  font-family: "Gruppo", cursive;
-  padding: 0.5em;
-  margin: 0;
-  width: 100%;
-  width: auto;
-  border-radius: 15px;
-  border: none;
-  outline: none;
-  opacity: 0;
-  transform: scale(0.5);
-  transform-style: preserve-3d;
-  animation: show-cta 4s 5.5s;
-  animation-fill-mode: forwards;
-  transition: 0.3s linear;
-  cursor: pointer;
-  -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
-  z-index: 2;
-}
-@media (min-width: 768px) {
-  #home .hero #cta-header {
-    font-size: 1.5em;
-    width: 100%;
-    text-align: center;
-  }
-}
-@keyframes show-cta {
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-#home .hero #cta-header::before, #home .hero #cta-header::after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 15px;
-  transition: 0.3s ease;
-  border: none;
-  outline: none;
-}
-#home .hero #cta-header::before {
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
-}
-#home .hero #cta-header::after {
-  opacity: 1;
-  z-index: -1;
-  animation: 3s cta-btn infinite;
-  animation-delay: 6s;
-  transition: 0.3s;
-  outline: none;
-  border: none;
-  background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 2px rgba(221, 221, 221, 0.3), 3px 3px 3px rgba(0, 0, 0, 0.2);
-}
-#home .hero #cta-header span {
-  position: relative;
-  display: inline-block;
-  text-transform: uppercase;
-  color: #f4f4f4;
-  font-size: 2em;
-  font-weight: 700;
-  animation: animate 3s ease-in-out infinite;
-  animation-delay: calc(1s + .2s * var(--i));
-  /* cta keyframes*/
-  /* end of cta keyframes*/
-}
-@keyframes animate {
-  0% {
-    transform: translateY(0px);
-  }
-  20% {
-    transform: translateY(-10px) scale(1.1);
-  }
-  40%, 100% {
-    transform: translateY(0);
-  }
-}
-#home .hero #cta-header:hover span {
-  color: #ead2a1;
-  color: #f4f4f4;
-  animation: none;
-}
-#home .hero #cta-header:active {
-  transition: 0.2s;
-  transform: scale(0.9);
-}
-#home .hero #cta-header:active::before {
-  opacity: 0;
-}
-#home .hero #cta-header:active::after {
-  opacity: 1;
-}
-#home #cta {
-  position: absolute;
-  bottom: 10vh;
-  left: 5vw;
-  transition: 1s;
-}
-#home #cta .cta {
-  font-size: 1.5rem;
-  font-family: "Ubuntu", sans-serif;
-  color: #f4f4f4;
-  text-transform: capitalize;
-  padding: 0.5rem;
-  width: 15rem;
-  border-radius: 20px;
-  display: block;
-  text-align: center;
-  cursor: pointer;
-  border: none;
-  position: relative;
-  isolation: isolate;
-  transition: 0.2s;
-  letter-spacing: 0.05rem;
-}
-#home #cta .cta::before, #home #cta .cta::after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
-  outline: none;
-  transition: 0.2s;
-  border-radius: 20px;
-  z-index: -1;
-}
-#home #cta .cta::before {
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
-}
-#home #cta .cta::after {
-  opacity: 0;
-  background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 2px rgba(221, 221, 221, 0.3), 3px 3px 3px rgba(0, 0, 0, 0.2);
-}
-#home #cta .cta:hover {
-  letter-spacing: normal;
-}
-#home #cta .cta:hover::before {
-  opacity: 0;
-}
-#home #cta .cta:hover::after {
-  opacity: 1;
-}
-#home #cta .cta:active {
-  transform: scale(0.98);
-}
-#home #cta .cta:active::before {
-  opacity: 0;
-}
-#home #cta .cta:active::after {
-  opacity: 1;
 }
 
 section {
