--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -134,7 +134,7 @@
             cursor: pointer;
             border: none;
             outline: none;
-            border-radius: 10px;
+            border-radius: .5rem;
             background: $link-crimson-dark;
             text-align: center;
             transition: .2s;
@@ -154,7 +154,7 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
-                border-radius: 10px;
+                border-radius: .5rem;
                 border: none;
                 outline: none;
                 transition: .2s;
