--- a/css/style.css
+++ b/css/style.css
@@ -174,22 +174,22 @@ hamburger
 /* end of section title span animation */
 .top-link {
   position: fixed;
-  bottom: 0;
-  right: 0;
+  bottom: 5vh;
+  right: 5vw;
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
   display: grid;
   place-items: center;
-  border-radius: 5px;
+  border-radius: 0.25rem;
   transition: 0.5s ease-in;
   opacity: 1;
-  transform: translateY(10vh);
+  transform: translateY(15vh);
   z-index: 30;
-  box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a;
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
 }
 .top-link i {
   color: #ddd;
-  padding: 0.3em;
-  font-size: 1.5em;
+  padding: 0.5rem;
+  font-size: 1rem;
 }
 .top-link.show-link {
   transition: all 0.5s ease-in-out;
@@ -668,7 +668,7 @@ hamburger
   }
 }
 #home .hero #cta-header {
-  font-size: 1.3em;
+  font-size: 1.5rem;
   background: #dc143c;
   position: relative;
   display: block;
@@ -737,7 +737,7 @@ hamburger
   display: inline-block;
   text-transform: uppercase;
   color: #f4f4f4;
-  font-size: 2em;
+  font-size: 2rem;
   font-weight: 700;
   animation: animate 3s ease-in-out infinite;
   animation-delay: calc(1s + .2s * var(--i));
@@ -911,7 +911,7 @@ hamburger
   cursor: pointer;
   border: none;
   outline: none;
-  border-radius: 10px;
+  border-radius: 0.5rem;
   background: #b60f30;
   text-align: center;
   transition: 0.2s;
@@ -929,7 +929,7 @@ hamburger
   left: 0;
   width: 100%;
   height: 100%;
-  border-radius: 10px;
+  border-radius: 0.5rem;
   border: none;
   outline: none;
   transition: 0.2s;
