--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -327,6 +327,14 @@ hamburger
 }
 // end of back to top button
 
+
+// CTA BUTTONS
+.btn {
+    border: 2px solid #000;
+    padding: .5rem;
+    border-radius: 1rem;
+    text-align: center;
+}
 // SCROLL OUT
 [data-scroll] {
     transition: 1s;
