--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -302,7 +302,8 @@
         height: 100vh;
         position: sticky;
         top: 8vh;
-        padding: 5vh 0;
+        top: 0;
+        padding: 10vh 0;
         background: $overlay-dark;
         // MENU IMAGE
 
