--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,7 +19,7 @@
 
 html {
     scroll-behavior: smooth;
-    scroll-padding-top: 5vh;
+    // scroll-padding-top: 5vh;
 }
 body {
     font-family: "Montserrat", sans-serif;
