--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -334,6 +334,7 @@ hamburger
     padding: .5rem;
     border-radius: 1rem;
     text-align: center;
+    text-transform: capitalize;
 }
 // SCROLL OUT
 [data-scroll] {
