--- a/css/style.css
+++ b/css/style.css
@@ -225,9 +225,56 @@ hamburger
 .btn {
   border: 2px solid #000;
   padding: 0.5rem;
+  border: none;
   border-radius: 1rem;
   text-align: center;
+  letter-spacing: 0.05rem;
+  transition: 0.2s;
   text-transform: capitalize;
+  isolation: isolate;
+  position: relative;
+}
+.btn::before, .btn::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+  transition: 0.2s;
+  z-index: -1;
+}
+.btn::before {
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+}
+.btn::after {
+  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 2px 3px 2px rgba(0, 0, 0, 0.35);
+  opacity: 0;
+}
+@media (min-width: 820px) {
+  .btn:hover {
+    transform: scale(0.97);
+    letter-spacing: normal;
+  }
+  .btn:hover::before {
+    opacity: 0;
+  }
+  .btn:hover::after {
+    opacity: 1;
+  }
+}
+@media (max-width: 820px) {
+  .btn:active {
+    transform: scale(0.97);
+    letter-spacing: normal;
+  }
+  .btn:active::before {
+    opacity: 0;
+  }
+  .btn:active::after {
+    opacity: 1;
+  }
 }
 
 [data-scroll] {
@@ -850,12 +897,17 @@ hamburger
 @media (min-width: 820px) {
   #menu .menu-section .menu-cta {
     flex-direction: row;
+    width: 30rem;
+  }
+  #menu .menu-section .menu-cta .btn {
+    padding: 1rem 0;
   }
 }
 #menu .menu-section .menu-cta .btn {
   width: 100%;
   display: block;
   color: #ead2a1;
+  padding: 0.5rem 0;
 }
 #menu .menu-section .menu-cta .btn.btn-page {
   width: 50%;
