--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -332,9 +332,51 @@ hamburger
 .btn {
     border: 2px solid #000;
     padding: .5rem;
+    border: none;
     border-radius: 1rem;
     text-align: center;
+    letter-spacing: .05rem;
+    transition: .2s;
     text-transform: capitalize;
+    isolation: isolate;
+    position: relative;
+
+    &::before, &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 1rem;
+        transition: .2s;
+        z-index: -1;
+    }
+    &::before {
+        box-shadow: $box-light-top-sm;
+    }
+    &::after {
+        box-shadow: $box-light-top-sm-hover;
+        opacity: 0;
+    }
+    // HOVER AND ACTIVE CLASS MEDIA QUERY
+    @media (min-width: 820px) {
+        &:hover {
+            transform: scale(.97);
+            letter-spacing: normal;
+            &::before {opacity: 0};
+            &::after {opacity: 1};
+        }
+    }
+    // MOBILE BTN
+    @media (max-width: 820px) {
+        &:active {
+            transform: scale(.97);
+            letter-spacing: normal;
+            &::before {opacity: 0};
+            &::after {opacity: 1};
+        }
+    }
 }
 // SCROLL OUT
 [data-scroll] {
